singleton_builder/force-app/main/default/objects/Sales_Rep__c/Sales_Rep__c.object-meta.xml
<CustomObject>
    <description>For Design Patterns Singleton and builder demos</description>
    <label>Sales Rep</label>
    <nameField>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>