singleton_builder/force-app/main/default/objects/Sales_Rep__c/fields/Franchise_Office__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Franchise Office</label>
    <referenceTo>Franchise_Office__c</referenceTo>
    <relationshipLabel>Sales Reps</relationshipLabel>
    <relationshipName>Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>