singleton_builder/force-app/main/default/objects/Sales_Rep__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>For Design Patterns Singleton and builder demos</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>