singleton_builder/force-app/main/default/objects/Sales_Rep__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Reps</relationshipLabel>
    <relationshipName>Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>