singleton_builder/force-app/main/default/objects/Sales_Rep__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>For Design Patterns Singleton and builder demos</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>